fixed JDK 11+ warnings for jbake